exports[`test ButtonThemeAction 1`] = `
<button
  autoFocus={undefined}
  className="control"
  disabled={undefined}
  id={undefined}
  type={undefined}>
  Action
</button>
`;

exports[`test ButtonThemeLink 1`] = `
<button
  autoFocus={undefined}
  className="control"
  disabled={undefined}
  id={undefined}
  type={undefined}>
  Action
</button>
`;

exports[`test ButtonThemeNormal 1`] = `
<button
  autoFocus={undefined}
  className="control"
  disabled={undefined}
  id={undefined}
  type={undefined}>
  Normal
</button>
`;

exports[`test Select 1`] = `
<span
  className="wrapper"
  onChange={undefined}>
  <input
    disabled={undefined}
    id={undefined}
    name="select-control"
    type="hidden"
    value="jawa" />
  <span
    className="baseline">
    <button
      className="control"
      disabled={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}>
      Jawa
    </button>
    <i
      className="arrow"
      onClick={[Function]} />
  </span>
  <div
    className="menu isClosedMenu" />
</span>
`;

exports[`test SelectSearchable 1`] = `
<span
  className="wrapper"
  onChange={undefined}>
  <input
    disabled={undefined}
    id={undefined}
    name="select-control"
    type="hidden"
    value="jawa" />
  <span
    className="baseline">
    <input
      className="search isPseudoFocusedSearch"
      disabled={undefined}
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      value="" />
    <span
      className="control"
      disabled={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}>
      Jawa
    </span>
    <i
      className="arrow"
      onClick={[Function]} />
  </span>
  <div
    className="menu isClosedMenu" />
</span>
`;
